# langgraph-memory

./: .env.example  Makefile  README.md  example.ipynb  langgraph.json  pyproject.toml
memory_service/: __init__.py  _schemas.py  _settings.py  _utils.py  chatbot.py  graph.py
src/example_app/: __init__.py
src/memory_service/: __init__.py  _configuration.py  _constants.py  _schemas.py  _utils.py  graph.py  state.py
tests/cassettes/: 337b71fe-920f-4c26-826d-8de9554e257e.yaml  e021dd72-efe0-40ee-91da-531b6b972bd0.yaml
tests/evals/: test_memories.py  test_store.py
