[project]
name = "memory-service"
version = "0.0.1"
description = "A simple memory service (for agents) on LangGraph cloud."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.9.0,<3.13"
dependencies = [
    "langgraph>=0.1.0",
    "trustcall>=0.0.18",
    "langchain>=0.3.0",
    "langchain-core>=0.3.5,<0.4.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.1",
    "langgraph-sdk>=0.1.31",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.10", "mypy>=1.10.0", "pytest>=8.2.2", "langgraph-cli>=0.1.43", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
]


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E501"]
"*.ipynb" = ["D", "UP", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
